--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.pyc
-/db.sqlite3
+db.sqlite3
 .DS_Store
 .env
 */settings/local.py
@@ -13,6 +13,9 @@ __pycache__/
 
 # pycharm
 .idea
+
+# vscode
+.vscode/
 
 # data
 *.dump
