--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
