[api] Adds Repository & Commit viewsets

--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -34,6 +34,7 @@ pylint:
     - no-self-use
     - no-member
     - abstract-method
+    - too-many-ancestors
   options:
     max-line-length: 100
 
