[api] Add tests

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,6 @@ omit = */virtualenvs/*
        */tests/*
        */tests.py
        manage.py
+       github_monitor/celery.py
+       github_monitor/wsgi.py
+       github_monitor/urls.py
