--- a/package.json
+++ b/package.json
@@ -49,16 +49,18 @@
     "bootstrap": "^4.0.0",
     "bootstrap-loader": "^2.2.0",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.11",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
+    "font-awesome-loader": "^1.0.2",
+    "image-webpack-loader": "^4.2.0",
     "imports-loader": "^0.7.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.8.3",
     "popper.js": "^1.12.9",
     "postcss": "^6.0.3",
     "postcss-loader": "^2.0.6",
@@ -67,9 +69,10 @@
     "react-dom": "^15.6.1",
     "redux": "^3.7.1",
     "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.2",
+    "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^0.5.9",
     "webpack": "^3.8.1",
     "webpack-bundle-tracker": "^0.2.0",
