--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "image-webpack-loader": "^4.2.0",
     "imports-loader": "^0.7.1",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "node-sass": "^4.8.3",
