--- a/.bootstraprc
+++ b/.bootstraprc
@@ -9,8 +9,8 @@ bootstrapVersion: 4
 styleLoaders:
   - style-loader
   - css-loader
-  - sass-loader
   - postcss-loader
+  - sass-loader
 
 # Extract styles to stand-alone css file
 # Different settings for different environments can be used,
@@ -73,13 +73,13 @@ styles:
   close: false
   custom-forms: false
   dropdown: false
-  input-group: false
+  input-group: true
   jumbotron: true
   list-group: false
   media: false
   nav: true
   navbar: true
-  pagination: false
+  pagination: true
   progress: false
   transitions: true
 
