--- a/package.json
+++ b/package.json
@@ -69,7 +69,12 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.1",
+    "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.7",
     "script-loader": "^0.7.0",
@@ -90,9 +95,9 @@
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
     "eslint-plugin-react": "^7.1.0",
-    "react-hot-loader": "^1.3.1",
     "jest": "^21.2.1",
     "jest-css-modules": "^1.1.0",
+    "react-hot-loader": "^3.1.3",
     "react-test-renderer": "^15.4.1"
   }
 }
