[commit-page] Starting work on the commits page

--- a/.bootstraprc
+++ b/.bootstraprc
@@ -67,7 +67,7 @@ styles:
   # Components
   alert: false
   badge: false
-  breadcrumb: false
+  breadcrumb: true
   button-group: false
   card: true
   close: false
