--- a/package.json
+++ b/package.json
@@ -95,9 +95,11 @@
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
     "eslint-plugin-react": "^7.1.0",
+    "fetch-mock": "^6.3.0",
     "jest": "^21.2.1",
     "jest-css-modules": "^1.1.0",
     "react-hot-loader": "^3.1.3",
-    "react-test-renderer": "^15.4.1"
+    "react-test-renderer": "^15.4.1",
+    "redux-mock-store": "^1.5.1"
   }
 }
