--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,7 @@ jobs:
           name: run tests
           command: |
             pipenv run coverage run --source='.' manage.py test
-            coverage report
-            npm run test
+            pipenv run coverage report
       - store_artifacts:
           path: test-reports
           destination: test-reports
