--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.4
+      - image: docker pull nikolaik/python-nodejs
 
     working_directory: ~/github-monitor
 
@@ -28,8 +28,30 @@ jobs:
       - run:
           name: run tests
           command: |
-            pipenv run coverage run --source='.' manage.py test
-            pipenv run coverage report
+            - npm run build
+            - npm run lint
+            # style check
+            - pipenv run prospector
+            # security checks
+            - pipenv run bandit -r .
+            - pipenv check
+            # imports check
+            - pipenv run isort **/*.py --check-only
+            # pre-commit additional checks
+            - SKIP=prospector,isort,eslint,missing-migrations pipenv run pre-commit run --all-files
+            - >-
+              DJANGO_SETTINGS_MODULE=github_monitor.settings.local_base
+              pipenv run python manage.py has_missing_migrations --ignore authtools;
+            - >-
+              DJANGO_SETTINGS_MODULE=github_monitor.settings.production
+              SECRET_KEY=$(python -c 'import uuid; print(uuid.uuid4().hex + uuid.uuid4().hex)')
+              DATABASE_URL='sqlite:///'
+              ALLOWED_HOSTS='.example.org'
+              REDIS_URL='redis://'
+              pipenv run python manage.py check --deploy
+            - pipenv run coverage run manage.py test
+            - npm run test
+            - pipenv run coverage report
       - store_artifacts:
           path: test-reports
           destination: test-reports
