--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:  # remeber to update those!
   python:
-    version: 3.6.4
+    version: 3.6.3
   node:
     version: 6.1.0
   environment:
@@ -42,6 +42,7 @@ test:
       pipenv run python manage.py check --deploy
     - pipenv run coverage run manage.py test
     - npm run test
+    - pipenv run coverage report
   post:
     - pipenv run coverage html -d $CIRCLE_ARTIFACTS
 
