[master] Update circle.yml & test_serializers

--- a/circle.yml
+++ b/circle.yml
@@ -40,6 +40,7 @@ test:
       SECRET_KEY=$(python -c 'import uuid; print(uuid.uuid4().hex + uuid.uuid4().hex)')
       DATABASE_URL='sqlite:///'
       ALLOWED_HOSTS='.example.org'
+      HOST='example.org'
       REDIS_URL='redis://'
       pipenv run python manage.py check --deploy
     - pipenv run coverage run manage.py test
